# munich-open-data

./: .gitignore  package.json
assets/: README.md
backend/: README.md  pyproject.toml
backend/assets/: README.md  export_ab2010.xlsx
frontend/: package.json
frontend/src/routes/: Header.svelte
frontend/src/routes/map/: munich.ts
scripts/: filterGeoJsonFromGermanyToStartingWith8.ipynb
src/routes/: Header.svelte
src/routes/about/: +page.svelte
src/routes/map/: +page.svelte
